--- a/wild_animals/index.html
+++ b/wild_animals/index.html
@@ -17,11 +17,26 @@
     <br>
     <br>
 
-    <h2>Elehant</h2>
+    <p>Let's talk about wild animals around the world:</p>
+    <h2>Giraffe</h2>
+    <img src="pictures/giraffe.jpg">
+    <p><b>Area:</b> Africa</p>
+    <p><b>Weight:</b> 900-1200kg</p>
+    <p><b>Height:</b> 6m</p>
+    <br>
+
+    <h2>Elephant</h2>
     <img width=350px src="pictures/elephant.jpg">
     <p><b>Area:</b> Africa, Asia</p>
     <p><b>Weight:</b> 4000-7000kg</p>
     <p><b>Height:</b> 3m</p>
+    <br>
+
+    <h2>Monkey</h2>
+    <img width=350px src="pictures/monkey.jpg">
+    <p><b>Area:</b> Africa, Asia</p>
+    <p><b>Weight:</b> 6-7000kg</p>
+    <p><b>Height:</b> 1m</p>
     <br>
 
   </body>
